Correct z-index

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -29,7 +29,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 1;
 }
 
 .critter-name {
