--- a/src/Form/Form.css
+++ b/src/Form/Form.css
@@ -6,14 +6,14 @@
 .left-ribbon {
   margin-right: -2.3rem;
   margin-top: .8rem;
-  z-index: 1;
+  /* z-index: 3; */
 }
 
 .right-ribbon {
   transform: scaleX(-1);
   margin-left: -2.3rem;
   margin-top: .8rem;
-  z-index: 1;
+  z-index: -1;
 }
 
 .form {
@@ -23,7 +23,7 @@
   justify-content: center;
   align-items: center;
   background-color: #f1e26f;
-  z-index: 2;
+  z-index: auto;
 }
 
 select, input, button {
