--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -1,7 +1,6 @@
 .main {
   margin: 0;
   height: 100vh;
-  border: 2px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
